--- a/src/WebGateway/Host/Host.csproj
+++ b/src/WebGateway/Host/Host.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\BuildingBlocks\Shared.Infrastructure\Shared.Infrastructure.csproj" />
     <ProjectReference Include="..\..\Modules\Media\Media.csproj" />
+    <ProjectReference Include="..\..\Modules\Courses\Courses.csproj" />
   </ItemGroup>
 
 </Project>
