--- a/src/WebGateway/Host/appsettings.json
+++ b/src/WebGateway/Host/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "MediaDb": "Host=localhost;Database=lms_db;Username=admin;Password=admin1234;SearchPath=media"
+    "MediaDb": "Host=localhost;Database=lms_db;Username=admin;Password=admin1234;SearchPath=media",
+    "CoursesDb": "Host=localhost;Database=lms_db;Username=admin;Password=admin1234;SearchPath=courses"
   },
   "AllowedHosts": "*"
 }
