--- a/src/WebGateway/Host/Host.csproj
+++ b/src/WebGateway/Host/Host.csproj
@@ -18,6 +18,7 @@
     <ProjectReference Include="..\..\BuildingBlocks\Shared.Infrastructure\Shared.Infrastructure.csproj" />
     <ProjectReference Include="..\..\Modules\Media\Media.csproj" />
     <ProjectReference Include="..\..\Modules\Courses\Courses.csproj" />
+    <ProjectReference Include="..\..\Modules\Users\Users.csproj" />
   </ItemGroup>
 
 </Project>
