--- a/src/Modules/Users/Users.csproj
+++ b/src/Modules/Users/Users.csproj
@@ -13,5 +13,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\BuildingBlocks\Shared.Abstractions\Shared.Abstractions.csproj" />
     <ProjectReference Include="..\..\BuildingBlocks\Shared.Contracts\Shared.Contracts.csproj" />
+    <ProjectReference Include="..\Courses.Contracts\Courses.Contracts.csproj" />
   </ItemGroup>
 </Project>
