--- a/src/WebGateway/Host/appsettings.json
+++ b/src/WebGateway/Host/appsettings.json
@@ -8,7 +8,8 @@
   "ConnectionStrings": {
     "MediaDb": "Host=localhost;Database=lms_db;Username=admin;Password=admin1234;SearchPath=media",
     "CoursesDb": "Host=localhost;Database=lms_db;Username=admin;Password=admin1234;SearchPath=courses",
-    "UsersDb": "Host=localhost;Database=lms_db;Username=admin;Password=admin1234;SearchPath=users"
+    "UsersDb": "Host=localhost;Database=lms_db;Username=admin;Password=admin1234;SearchPath=users",
+    "IdentityDb": "Host=localhost;Database=lms_db;Username=admin;Password=admin1234;SearchPath=identity"
   },
   "AllowedHosts": "*"
 }
