login ve register

--- a/src/WebGateway/Host/appsettings.Development.json
+++ b/src/WebGateway/Host/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Jwt": {
+    "SecretKey": "lm_s3cR3t_K9vX2pQ8zLm4RtY7uWs1BxEa",
+    "Issuer": "PawConnectBackend",
+    "Audience": "PawConnectFrontend"
   }
 }
