--- a/src/WebGateway/Host/appsettings.json
+++ b/src/WebGateway/Host/appsettings.json
@@ -11,5 +11,10 @@
     "UsersDb": "Host=localhost;Database=lms_db;Username=admin;Password=admin1234;SearchPath=users",
     "IdentityDb": "Host=localhost;Database=lms_db;Username=admin;Password=admin1234;SearchPath=identity"
   },
+  "Jwt": {
+    "SecretKey": "lm_s3cR3t_K9vX2pQ8zLm4RtY7uWs1BxEa",
+    "Issuer": "lms",
+    "Audience": "lmsapi"
+  },
   "AllowedHosts": "*"
 }
